[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/components/GameHUD/GameHUD.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/FPSCounter/FPSCounter.tscn" type="PackedScene" id=2]
[ext_resource path="res://resource/font72.Cave-Story.tres" type="DynamicFont" id=3]
[ext_resource path="res://resource/font48.Cave-Story.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/image/background/board.png" type="Texture" id=5]
[ext_resource path="res://resource/font108.Cave-Story.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/sound/Menu_Navigate_00.wav" type="AudioStream" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=7]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=8]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=9]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=10]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[node name="GameHUD" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="FPSCounter" parent="." index="0" instance=ExtResource( 2 )]

[node name="Score" type="Label" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -100.0
margin_top = 20.0
margin_right = 100.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="MessageTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Tween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Menu" type="HBoxContainer" parent="." index="4"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = 100.0
margin_right = 240.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 50
alignment = 1
_sections_unfolded = [ "Margin", "custom_constants" ]

[node name="Restart" type="Button" parent="Menu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 65.0
margin_right = 215.0
margin_bottom = 48.0
rect_min_size = Vector2( 150, 48 )
rect_pivot_offset = Vector2( 0, 0 )
focus_neighbour_left = NodePath("../Exit")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.149999, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.095145, 0.666016, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Restart"
flat = true
align = 1
_sections_unfolded = [ "Focus", "Material", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Exit" type="Button" parent="Menu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 265.0
margin_right = 415.0
margin_bottom = 48.0
rect_min_size = Vector2( 150, 48 )
rect_pivot_offset = Vector2( 0, 0 )
focus_neighbour_right = NodePath("../Restart")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.712891, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit"
flat = true
align = 1
_sections_unfolded = [ "Focus", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Message" type="CenterContainer" parent="." index="5"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = -100.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Margin", "Rect" ]

[node name="Board" type="TextureRect" parent="Message" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -50.0
margin_right = 400.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 200 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="Message" type="Label" parent="Message" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 16.0
margin_right = 400.0
margin_bottom = 84.0
rect_min_size = Vector2( 400, 68 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
text = "Ready!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]

[node name="MenuAudio" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 7 )
volume_db = -20.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]

[connection signal="focus_entered" from="Menu/Restart" to="." method="_on_focus_changed"]

[connection signal="mouse_entered" from="Menu/Restart" to="." method="_on_focus_changed"]

[connection signal="pressed" from="Menu/Restart" to="." method="_on_Restart_pressed"]

[connection signal="focus_entered" from="Menu/Exit" to="." method="_on_focus_changed"]

[connection signal="mouse_entered" from="Menu/Exit" to="." method="_on_focus_changed"]

[connection signal="pressed" from="Menu/Exit" to="." method="_on_Exit_pressed"]


